UPDATED: Table, ADDED: total and order table

--- a/src/assets/styles/components/Table.css
+++ b/src/assets/styles/components/Table.css
@@ -4,7 +4,11 @@ table {
 }
 
 td, th {
-  border: 1px solid #dddddd;
+  border: 1px solid #efefef;
   text-align: left;
   padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #efefef;
 }
