--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,8 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap');
+
+
+
 .App {
   text-align: center;
   max-width: 1100px;
   width: 100%;
   margin: 20px auto;
+  font-family: 'Poppins', sans-serif;
 }
 
 
+button{
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
+.btn{
+  background: black;
+  color: inherit;
+  padding-block-start: 13px;
+  padding-block-end: 13px;
+  padding-inline-start: 26px;
+  padding-inline-end: 26px;
+  color: white;
+  font-weight: 900;
+}
+
+select{
+  border:none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -ms-appearance: none;
+  background: black;
+  font: inherit;
+  color: inherit;
+  padding-block-start: 13px;
+  padding-block-end: 13px;
+  padding-inline-start: 26px;
+  padding-inline-end: 26px;
+  color: white;
+  font-weight: 900;
+}
